[package]
authors = ["Daniel Egger <daniel@eggers-club.de>"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
description = "Peripheral access API for STM32F767 microcontrollers"
documentation = "https://docs.rs/stm32f767-hal"
keywords = [
    "arm",
    "cortex-m",
    "stm32f767",
    "hal",
]
license = "0BSD"
name = "stm32f767-hal"
repository = "https://github.com/therealprof/stm32f767-hal"
version = "0.1.0"

[dependencies]
bare-metal = "0.1.2"
cortex-m = "0.4.3"
nb = "0.1.1"
panic-abort = "0.1.1"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.1.2"

[dependencies.stm32f7]
features = [
    "stm32f7x7",
    "rt",
]
version = "0.1.1"

[dev-dependencies]
ina260 = "0.1.1"
numtoa = "0.0.7"

[features]
default = ["rt"]
rt = []
[profile.dev]
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"
