[package]
authors = ["Daniel Egger <daniel@eggers-club.de>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32F767 microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "stm32f767", "hal"]
license = "0BSD"
name = "stm32f767-hal"
repository = "https://github.com/therealprof/stm32f767-hal"
documentation = "https://docs.rs/stm32f767-hal"
readme = "README.md"
edition = "2018"
version = "0.3.0-dev"

[dependencies]
cortex-m-rt = "0.6.7"
nb = "0.1.1"

[dependencies.cortex-m]
features = ["const-fn"]
version = "0.5.8"

[dependencies.stm32f7]
features = ["stm32f7x7"]
version = "0.6.0"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"

[dev-dependencies]
panic-halt = "0.2.0"
cortex-m-rtfm = "0.4.2"

[features]
rt = ["stm32f7/rt"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[[example]]
name = "timer_interrupt_rtfm"
required-features = ["rt"]
